# suiup

./: Cargo.toml  README.md  rustfmt.toml
sui-assets-info/: Cargo.toml
sui-assets-info/src/: config.rs  desc.rs  error.rs  lib.rs
sui-assets-info/src/backend/: github.rs  mod.rs  walrus.rs
suiup/: Cargo.toml
suiup/src/: error.rs  lib.rs  main.rs
suiup/src/common/: download.rs  fs.rs  mod.rs  setting.rs
suiup/src/process/: config.rs  mod.rs
suiup/src/subcommand/: config.rs  default.rs  list.rs  mod.rs  remove.rs  update.rs
