[workspace]
resolver = "2"
members = ["sui-assets-info", "suiup"]


[workspace.dependencies]
thiserror = "1.0.64"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = [
    "rustls-tls",
    "json",
    "stream",
], default-features = false }


msrv = "1.81"
