[package]
name = "suiup"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.18", features = ["derive"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
home = "0.5.9"
sui-assets-info = { path = "../sui-assets-info" }
anyhow = "1.0.89"
tokio.workspace = true
reqwest.workspace = true
indicatif = "0.17.8"
futures-util = "0.3.30"
flate2 = "1.0.34"
tar = "0.4.42"

[target."cfg(windows)".dependencies]
junction = "1.2.0"
